# meal-planner

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  meal-plan-texmex-v7-defs.json  servings-and-nutrition-refactor-plan.md  ui-theme.md
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  dependencies.py  logging.json  logging_config.py  main.py
backend/app/models/: database.py  fitness.py  food_log.py  meal_plan.py  pantry_item.py  profile.py  recipe.py  shopping_list.py
backend/app/repositories/: fitness_repo.py  food_log_repo.py  meal_plan_repo.py  pantry_item_repo.py  profile_repo.py  recipe_repo.py  shopping_list_repo.py
backend/app/repositories/firestore/: client.py  entity.py  fitness_repo.py  food_log_repo.py  meal_plan_repo.py  migrations.py  pantry_item_repo.py  profile_repo.py  recipe_repo.py  shopping_list_repo.py
backend/app/routers/: barcode.py  fitness.py  food_log.py  meal_plans.py  pantry.py  profiles.py  recipes.py  shopping_list.py  tesco.py
backend/app/schemas/: fitness.py  food_log.py  meal_plan.py  nutrition.py  pantry_item.py  profile.py  recipe.py  shopping_list.py  tesco.py
backend/app/services/: food_log_service.py  shopping_service.py  strava_service.py  tesco_service.py
docs/: ui-baseline.md  ui-style-guide.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
infra/: README.md  backend.hcl.example  bootstrap-state-bucket.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: migrate_to_cloud.py
(+38 files in other folders)
